--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ p {
 /* Hero section */
 
 #hero {
-  background-image: url(./img/real-hacker.jpg);
+  background-image: url(./img/java-bg.jpg);
   background-size: cover;
   background-position: top center;
   background-attachment: fixed;
