added video background

--- a/style.css
+++ b/style.css
@@ -248,6 +248,18 @@ p {
   z-index: 1;
 }
 
+#hero #background-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: -1;
+}
+
 #hero::after {
   content: "";
   position: absolute;
@@ -792,6 +804,7 @@ p {
     margin-right: 5px;
     margin-left: 5px;
   }
+
   /* Project */
   #projects .project-item:nth-child(even) {
     flex-direction: row-reverse;
