--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ p {
 /* Hero section */
 
 #hero {
-    background-image: url(./img/java-bg.jpg);
+    /* background-image: url(./img/java-bg.jpg); */
     background-size: cover;
     background-position: top center;
     background-attachment: fixed;
